tests/baselines/reference/project/outMixedSubfolderSpecifyOutputFile/amd/outMixedSubfolderSpecifyOutputFile.dts.errors.txt
bin/test.d.ts(7,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== bin/test.d.ts (1 errors) ====
    declare var m1_a1: number;
    declare class m1_c1 {
        m1_c1_p1: number;
    }
    declare var m1_instance1: m1_c1;
    declare function m1_f1(): m1_c1;
    declare module "ref/m2" {
                   ~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var m2_a1: number;
        export class m2_c1 {
            m2_c1_p1: number;
        }
        export var m2_instance1: m2_c1;
        export function m2_f1(): m2_c1;
    }
    declare var a1: number;
    declare class c1 {
        p1: number;
    }
    declare var instance1: c1;
    declare function f1(): c1;
    